fix: pretty er ikke en text-wrap

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -51,7 +51,7 @@ h6 {
 
 /* 8. Improve line wrapping */
 p {
-	text-wrap: pretty;
+	text-wrap: auto;
 }
 
 h1,
